# cc-yes

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-05-cc-yes.md  2026-06-07-feishu-approval.md  2026-06-08-feishu-websocket.md  2026-06-16-autoyes-plan.md
docs/superpowers/specs/: 2026-06-05-cc-yes-design.md  2026-06-07-feishu-approval-design.md  2026-06-08-feishu-websocket-design.md  2026-06-16-autoyes-design.md
examples/: card-test.rs  feishu-ws.rs
hooks/: hooks.json
scripts/: hook-entry.sh
skills/: install.md
skills/cc-yes-install/: SKILL.md
skills/install/: SKILL.md
src/: after.rs  config.rs  feishu.rs  hook.rs  log.rs  main.rs  matcher.rs  parser.rs  permission_request.rs  settings.rs  ws_client.rs
src/ws/: business.rs  mod.rs
src/ws/business/: event_types.rs  handler.rs  mod.rs  registry.rs  types.rs
src/ws/business/handlers/: card.rs  event.rs  mod.rs
src/ws/proto/: bootstrap.rs  client.rs  codec.rs  error.rs  frame.rs  headers.rs  heartbeat.rs  mod.rs  reassembly.rs  reconnect.rs
tests/: e2e.rs  integration.rs  ws_integration.rs
