[package]
name = "cc-yes"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "cc-yes"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
ureq = { version = "2", features = ["json"] }
tungstenite = { version = "0.24", features = ["native-tls"] }
base64 = "0.22.1"

# --- new for async WebSocket ---
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
prost = "0.13"
prost-derive = "0.13"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
